feat: add database models
